--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,33 @@
 [submodule "Development/Deployment/lib/forge-std"]
 	path = Development/Deployment/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Deployment/lib/forge-std"]
+	path = Deployment/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "DecentralizedCrowdfunding/lib/forge-std"]
+	path = DecentralizedCrowdfunding/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "DeploymentPreparations/lib/forge-std"]
+	path = DeploymentPreparations/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "DeploymentPreparations/lib/openzeppelin-contracts"]
+	path = DeploymentPreparations/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "DeploymentPreparations/lib/uniswap-v2-periphery"]
+	path = DeploymentPreparations/lib/uniswap-v2-periphery
+	url = https://github.com/Uniswap/uniswap-v2-periphery
+[submodule "DeploymentPreparations/lib/uniswap-v2-core"]
+	path = DeploymentPreparations/lib/uniswap-v2-core
+	url = https://github.com/Uniswap/uniswap-v2-core
+[submodule "Intergration-with-dex/lib/forge-std"]
+	path = Intergration-with-dex/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "Intergration-with-dex/lib/openzeppelin-contracts"]
+	path = Intergration-with-dex/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "Intergration-with-dex/lib/uniswap-v2-periphery"]
+	path = Intergration-with-dex/lib/uniswap-v2-periphery
+	url = https://github.com/Uniswap/uniswap-v2-periphery
+[submodule "Intergration-with-dex/lib/uniswap-v2-core"]
+	path = Intergration-with-dex/lib/uniswap-v2-core
+	url = https://github.com/Uniswap/uniswap-v2-core
